# declaro

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_security_and_integrity.py  0003_add_role_to_user.py  0004_katalog_yonetimi.py  0005_mukellef_yetki.py  add_kv_orani_to_mukellef.py  add_unique_constraint_kalem_verisi.py  deb44c2b850c_initial_tables.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: admin.py  admin_katalog.py  auth.py  calisma.py  donem.py  export.py  hesaplama.py  katalog.py  mukellef.py  users.py
backend/app/auth/: deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  admin_config.py  ana_kategori.py  calisma.py  donem.py  kalem_override.py  kalem_verisi.py  mukellef.py  mukellef_yetki.py  user.py
backend/app/export/: excel.py
backend/app/formul_motoru/: evaluator.py
backend/app/katalog/: cache.py  loader.py
backend/app/middleware/: security_headers.py
backend/app/pipeline/: kalem_hesaplayici.py  pipeline.py  types.py
backend/app/schemas/: auth.py  calisma.py  donem.py  kalem.py  mukellef.py  mukellef_yetki.py  user.py
backend/scripts/: seed_katalog.py
backend/tests/: conftest.py
backend/tests/api/: test_mukellef.py
backend/tests/formul_motoru/: test_evaluator.py
backend/tests/katalog/: test_loader.py
backend/tests/pipeline/: test_pipeline.py
digilib/: .gitignore
docs/: 298_GSYF_GSYO_Istirak_Kazanclari_Istisnasi_6.xlsx  declaro-mimari.md  (+27 more)
(+341 files in other folders)
